--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@kaviar/validator",
+  "name": "@kaviar/validator-bundle",
   "version": "1.0.0",
   "private": true,
   "description": "Object validation strategy using yup and decorators.",
@@ -47,8 +47,8 @@
     "jest-junit": "^10.0.0",
     "prettier": "^2.0.5",
     "source-map-support": "^0.5.13",
-    "typedoc": "^0.17.7",
-    "typescript": "^3.8.3"
+    "typedoc": "^0.19.0",
+    "typescript": "^4.0.2"
   },
   "typings": "dist/index.d.ts",
   "typescript": {
