--- a/package.json
+++ b/package.json
@@ -1,7 +1,6 @@
 {
   "name": "@kaviar/validator-bundle",
   "version": "1.0.0",
-  "private": true,
   "description": "Object validation strategy using yup and decorators.",
   "main": "dist/index.js",
   "repository": {
@@ -19,7 +18,7 @@
     "test:ci": "npm run coverage -- --ci --maxWorkers=2  --reporters=default --reporters=jest-junit",
     "coverage": "npm test -- --coverage",
     "coverage:upload": "codecov",
-    "prepublishOnly": "npm run clean && npm run compile",
+    "prepublishOnly": "npm run compile",
     "gen-doc": "typedoc ./src/index.ts --exclude ./src/__tests__ --out typeDocs --tsconfig tsconfig.json"
   },
   "dependencies": {
