--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "watch": "tsc -w",
     "pretest": "npm run compile",
     "test": "jest --verbose dist/__tests__/index.js",
+    "test:dev": "jest --verbose --watch src/__tests__/index.ts --detectOpenHandles",
     "test:clean": "jest --clearCache",
     "test:watch": "jest --verbose --watch dist/__tests__/index.js",
     "testonly": "npm test",
@@ -22,8 +23,7 @@
     "gen-doc": "typedoc ./src/index.ts --exclude ./src/__tests__ --out typeDocs --tsconfig tsconfig.json"
   },
   "dependencies": {
-    "@types/yup": "^0.29.0",
-    "yup": "^0.29.0"
+    "yup": "^0.32.0"
   },
   "peerDependencies": {
     "@kaviar/core": "^1.1.1"
@@ -37,16 +37,15 @@
     "@types/node": "^8.0.28",
     "@typescript-eslint/eslint-plugin": "2.3.0",
     "@typescript-eslint/parser": "2.3.0",
-    "chai": "^4.2.0",
-    "chai-as-promised": "^7.1.1",
     "eslint": "^6.6.0",
     "eslint-config-prettier": "6.3.0",
     "eslint-plugin-prettier": "3.1.1",
-    "jest": "^26.0.0",
+    "jest": "^27.0.0",
     "jest-junit": "^10.0.0",
     "prettier": "^2.0.5",
     "source-map-support": "^0.5.13",
-    "typescript": "^4.0.2"
+    "ts-jest": "^27.0.3",
+    "typescript": "4.2"
   },
   "typings": "dist/index.d.ts",
   "typescript": {
