--- a/package.json
+++ b/package.json
@@ -22,11 +22,9 @@
     "prepublishOnly": "npm run compile",
     "gen-doc": "typedoc ./src/index.ts --exclude ./src/__tests__ --out typeDocs --tsconfig tsconfig.json"
   },
-  "dependencies": {
-    "yup": "^0.32.0"
-  },
   "peerDependencies": {
-    "@kaviar/core": "^1.1.1"
+    "@kaviar/core": "^1.1.1",
+    "yup": "^0.32.0"
   },
   "devDependencies": {
     "@kaviar/core": "^1.1.1",
@@ -45,7 +43,8 @@
     "prettier": "^2.0.5",
     "source-map-support": "^0.5.13",
     "ts-jest": "^27.0.3",
-    "typescript": "4.2"
+    "typescript": "4.2",
+    "yup": "^0.32.0"
   },
   "typings": "dist/index.d.ts",
   "typescript": {
